--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <button type="button" class="btn btn-secondary btn-sm">Small button</button>
             </div>
         </div>
-        <div class="heading">
+<!--     Header of website -->
+        <div class="heading"> 
             <h1>Image Generator</h1>
             <h3>Want images just search</h3>
             <p>and</p>
